<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Craddle</string>
    <string name="home">Home</string>
    <string name="wishList">WishList</string>
    <string name="blogs">Blogs</string>
    <string name="account">Account</string>
    <string name="account_multimedia">AccountMultimedia</string>
    <string name="category">Categories</string>
    <string name="currency">₦</string>
    <string name="select_country">Select Country</string>
    <string name="category_list">Category List</string>
    <string name="product_list">Product List</string>
    <string name="vendor_list">Vendor List</string>
    <string name="product_details">Product Details</string>
    <string name="cart_list">Cart List</string>
    <string name="remove_item">Are you sure you want to remove this product from cart?</string>
    <string name="specialty_from_africa">Specialty From africa</string>
    <string name="tea">Tea</string>
    <string name="wish_list">Wish List</string>
    <string name="products">PRODUCTS</string>
    <string name="products_in">Product In </string>
    <string name="local_products_manufacturing_in_country">Local Products Manufacturing in Country</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="major_export_market_segment">Major Export Market Segment</string>
    <string name="prodcut_of_all_attraction_manufactured_in_country">Prodcut Of All Attraction Manufactured In Country</string>
    <string name="agricultural_products_exported_from_country">Agricultural Products Exported From Country</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="services">SERVICES</string>
    <string name="innovation">INNOVATION</string>
    <string name="description">Description</string>
    <string name="vendor_details">Vendor details</string>
    <string name="reding_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="retrun_policy">Return Policy</string>
    <string name="p_similar_product">Similar Product</string>
    <string name="p_on_sale">On Sale</string>
    <string name="p_daily_need">Daily Need</string>
    <string name="p_new_arrivals">New Arrivals</string>
    <string name="selected_iteams">Selected Iteams</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="loading">Loading</string>
    <string name="other">Other</string>
    <string name="item_added">Item added to cart successfully</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="username">UserName</string>
    <string name="your_account">Your account has been deactivated. Do you want to reactivate your account ?</string>
    <string name="password">Password</string>
    <string name="inter_password">Please inter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? <font color='#007d43'>SIGN UP</font></string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email ID</string>
    <string name="email_phone_no">Email ID/Phone No</string>
    <string name="email_phonno_or_emailid">Enter Email ID/Phone No</string>
    <string name="emai_invalid">Enter Email</string>
    <string name="enter_valid">Enter Valid Email</string>
    <string name="email_new">EMAIL ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="business_name">Business Name</string>
    <string name="confrim_password">Confirm Password</string>
    <string name="business_address">Business Address</string>
    <string name="referred">Referred by(Email)</string>
    <string name="p">Email</string>
    <string name="allready_have_an_account_sign_in">Already have an account ? <font color='#007d43'>SIGN IN</font></string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="invalid_user">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_no">Please Enter Phone No. 11 Digit</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_bus_name">Enter Business Name</string>
    <string name="enter_pass">Password should be minimum 7 digit</string>
    <string name="enter_con">Enter Confrim  Password</string>
    <string name="enter_bus_add">Enter Business Address</string>
    <string name="pass_should_be">Password should be gratter then 7.</string>
    <string name="pass_match">Password should be match.</string>
    <string name="pass_validation">Password must be atleast of 8 characters, 1 Uppercase alphabet,1 Lowercase Alphabet and 1 special character.</string>
    <string name="password_pattern">Password must be atleast of 8 characters, 1 alphabet and 1 special character.", title: "Weak Password !</string>
    <string name="signup">Signup</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="otp_verificatiion">OTP Verification</string>
    <string name="otp_has_been_sent_to_your_registred_email_address_please_enter_it_blow">OTP has been sent to your registered email address.please enter it blow.</string>
    <string name="continue1">Continue</string>
    <string name="don_t_receive_the_otp_resend_otp">Don\'t receive the Otp? <font color='#007d43'>RESEND OTP</font></string>
    <string name="don_t_receive_the_otp_resend_otp_new">Don\'t receive the Otp? <font color='#8B8989'>RESEND OTP</font></string>
    <string name="verify_otp">Please enter verification pin ,Which is sent to your registered email id.</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="subcate_list">SubCategory List</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="view_all">View All</string>
    <string name="welcome_to_saharago">Welcome To SaharaGo</string>
    <string name="buy_sell">Marketplace</string>
    <string name="detail_product">Product Details</string>
    <string name="my_account">My Account</string>
    <string name="my_address">My Address</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_con_pass">Enter confirm password</string>
    <string name="view_all_in_account">VIEW ALL</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="my_review">My Review</string>
    <string name="change_password">Change Password</string>
    <string name="change_or_reset_your_password">Change or Reset Your Password</string>
    <string name="my_order">My Order</string>
    <string name="change_now">CHANGE NOW</string>
    <string name="log_out">Log Out</string>
    <string name="please_enter_your_registered_email_well_send_you_link_to_reset_your_password">Please enter your registered email,well send you link to reset your password.</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_otp_and_reset_your_password">Please enter OTP and reset your Password</string>
    <string name="enter_otp">PleaseEnter otp</string>
    <string name="please_select_an_option">Please Select an Option</string>
    <string name="title">Title</string>
    <string name="mark_as_default">Mark as Default</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="what_do_you_want_to_search">What do you want to search</string>
    <string name="products_new">Product</string>
    <string name="vendor_new">Vendor</string>
    <string name="maltimedia">Multimedia</string>
    <string name="confirm_delete">CONFIRM DELETE</string>
    <string name="delete_account">Delete Account</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="we_are_sorry_to_see_you_go">We are sorry to see you go!</string>
    <string name="please_note_that_once_you_choose_to_delete_your_account_your_account_will_no_longer_be_available_to_you_and_you_will_not_be_able_to_activate_or_use_the_account_again">Please note that once you choose to delete your account, your account will no longer be available to you and you will not be able to activate or use the account again.</string>
    <string name="lf_you_are_not_sure_about_deleting_your_account_you_may_instead_deactivate_our_account_when_you_deactivate_your_account_you_are_logged_out_of_your_cradle_account_your_public_profile_on_cradle_is_no_longer_visible_your_wishlist_items_are_no_longer_accessible_through_the_associated_public_hyperlink_you_will_be_unsubscribed_from_receiving_promotional_emails_from_cradle">lf you are not sure about deleting your account, you may instead deactivate our account. When you deactivate your account, you are logged out of your Craddle account, your public profile on Craddle is no longer visible, your wishlist items are no longer accessible through the associated public hyperlink, you will be unsubscribed from receiving promotional emails from Craddle</string>
    <string name="if_you_wish_to_proceed_with_an_account_deletion_request_please_ensure_that_you_have_read_and_understood_the_following">If you wish to proceed with an account deletion request, please ensure that you have read and understood the following:</string>
    <string name="there_are_no_pending_orders_cancellation_return_refund_or_other_requests">• There are no pending orders, cancellation, return, refund or other requests.</string>
    <string name="you_have_exhausted_or_do_not_intend_to_use_supercoins_or_any_such_reward_points_associated_with_your_account_please_note_that_once_your_account_is_deleted_you_will_not_be_able_to_access_any_such_reward_points">• You have exhausted or do not intend to use SuperCoins or any such reward points associated with your account. Please note that once your account is deleted, you will not be able to access any such reward points.</string>
    <string name="you_will_not_be_able_to_access_or_request_to_access_order_history_wishlists_saved_addresses_previous_orders_and_invoices_save_or_preferred_payment_methods_or_use_any_of_the_products_and_services_offered_by_cradle_and_will_have_to_create_a_new_account_to_use_products_and_services_offered_by_us">• You will not be able to access or request to access order history, wishlists, saved addresses, previous orders and invoices, save or preferred payment methods, or use any of the products and services offered by Craddle and will have to create a new account to use products and services offered by us.</string>
    <string name="cradle_may_choose_to_refuse_deletion_of_your_account_in_case_you_have_any_grievances_related_to_pending_payments_to_your_orders_shipment_or_deliveries_credit_lines_etc">• Craddle may choose to refuse deletion of your account in case you have any grievances related to pending payments to your orders, shipment or deliveries, credit lines, etc.</string>
    <string name="you_acknowledge_that_you_have_read_our_privacy_policy">• You acknowledge that you have read our Privacy Policy.</string>
    <string name="cradle_may_choose_to_erase_all_the_data_and_products_of_the_vendor_if_they_deactivate_or_delete_their_account">• Craddle may choose to erase all the data and products of the vendor, if they deactivate or delete their account.</string>
    <string name="comment_new">Comment</string>
</resources>