<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_dialog"
    android:background="@color/full_transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"

        android:layout_alignParentBottom="true"
        android:background="@drawable/rac_rounded"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title"
            android:textSize="@dimen/_11sdp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/please_select_an_option"
            android:textSize="@dimen/_11sdp"
            />

        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/whiteCream"
            />
        <TextView
            android:id="@+id/tv_mark_as_default"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/mark_as_default"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />

        <TextView
            android:id="@+id/tv_edit_address"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/edit"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <TextView
            android:id="@+id/tv_delete_address"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/delete"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />

        <TextView
            android:id="@+id/tv_dismiss"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/dismiss"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
</RelativeLayout>