<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_dialog"
    android:background="@color/full_transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rac_rounded"
        android:orientation="vertical">

        <com.cts.saharaGoSeller.customui.CustomTextviewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/search"
            android:textSize="@dimen/_11sdp"
            />
        <com.cts.saharaGoSeller.customui.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/what_do_you_want_to_search"
            android:textSize="@dimen/_11sdp"
            />

        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/whiteCream"
            />
        <com.cts.saharaGoSeller.customui.CustomTextView
            android:id="@+id/tv_product_click"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/products_new"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />

        <com.cts.saharaGoSeller.customui.CustomTextView
            android:id="@+id/tv_vendor_click"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/vendor_new"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.saharaGoSeller.customui.CustomTextView
            android:id="@+id/tv_malti_click"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/maltimedia"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />

        <com.cts.saharaGoSeller.customui.CustomTextView
            android:id="@+id/tv_dismiss"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/dismiss"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
</RelativeLayout>