<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/rlToolBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_arrow"/>
            <com.cts.saharaGoSeller.customui.CustomTextviewBold
                android:layout_toRightOf="@+id/ivBack"
                android:id="@+id/tv_usertoolbartitle"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:text="@string/delete_account"/>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rlOpenCartScreen"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp">

                <ImageView
                    android:id="@+id/iv_cart_screen"
                    android:layout_width="@dimen/_23sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_height="@dimen/_23sdp"
                    android:src="@drawable/cart_new_twox"
                    />
                <RelativeLayout
                    android:visibility="visible"
                    android:id="@+id/rl_cart_count"
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/notify_item">
                    <com.cts.saharaGoSeller.customui.CustomTextviewBold
                        android:id="@+id/tv_cart_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp"
                        android:text="0"
                        />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.cts.saharaGoSeller.customui.CustomTextviewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:text="@string/terms_and_conditions"/>
        <com.cts.saharaGoSeller.customui.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_9sdp"
            android:text="@string/we_are_sorry_to_see_you_go"/>
        <com.cts.saharaGoSeller.customui.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_9sdp"
            android:text="@string/please_note_that_once_you_choose_to_delete_your_account_your_account_will_no_longer_be_available_to_you_and_you_will_not_be_able_to_activate_or_use_the_account_again"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/lf_you_are_not_sure_about_deleting_your_account_you_may_instead_deactivate_our_account_when_you_deactivate_your_account_you_are_logged_out_of_your_cradle_account_your_public_profile_on_cradle_is_no_longer_visible_your_wishlist_items_are_no_longer_accessible_through_the_associated_public_hyperlink_you_will_be_unsubscribed_from_receiving_promotional_emails_from_cradle"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/if_you_wish_to_proceed_with_an_account_deletion_request_please_ensure_that_you_have_read_and_understood_the_following"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/there_are_no_pending_orders_cancellation_return_refund_or_other_requests"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/you_have_exhausted_or_do_not_intend_to_use_supercoins_or_any_such_reward_points_associated_with_your_account_please_note_that_once_your_account_is_deleted_you_will_not_be_able_to_access_any_such_reward_points"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/you_will_not_be_able_to_access_or_request_to_access_order_history_wishlists_saved_addresses_previous_orders_and_invoices_save_or_preferred_payment_methods_or_use_any_of_the_products_and_services_offered_by_cradle_and_will_have_to_create_a_new_account_to_use_products_and_services_offered_by_us"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/cradle_may_choose_to_refuse_deletion_of_your_account_in_case_you_have_any_grievances_related_to_pending_payments_to_your_orders_shipment_or_deliveries_credit_lines_etc"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/you_acknowledge_that_you_have_read_our_privacy_policy"/>
            <com.cts.saharaGoSeller.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/cradle_may_choose_to_erase_all_the_data_and_products_of_the_vendor_if_they_deactivate_or_delete_their_account"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:background="@color/white"
                android:layout_height="wrap_content">
                <com.cts.saharaGoSeller.customui.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/email"/>
                <com.cts.saharaGoSeller.customui.CustomTextView
                    android:id="@+id/tvEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text=""/>
                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:hint="@string/password"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:paddingStart="-1dp"
                        android:textSize="@dimen/_11sdp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.cts.saharaGoSeller.customui.CustomTextviewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/comment_new"
                    android:textSize="@dimen/_9sdp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    >

                    <EditText
                        android:id="@+id/editRatingDis"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/rac_rounded"
                        android:gravity="top|left"
                        android:padding="@dimen/_7sdp"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false"
                        android:text=""
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>
                <com.cts.saharaGoSeller.customui.CustomTextviewBold
                    android:id="@+id/tvConfirmDeActivation"
                    android:layout_width="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_delete"
                    android:textSize="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="@color/colorGreen"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>